# digital-twin-db

./: .dockerignore  .env.example  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  IMPROVEMENTS.md  LINEAR_WORKSPACE_GUIDE.md  NAMING_STANDARDIZATION_PLAN.md  NAMING_STANDARDIZATION_PROGRESS.md  QUICK_REFERENCE.md  README.md  SUPABASE_IMPLEMENTATION.md  TESTING_GUIDE.md  TODO.md  WORK_PLAN.md  WSL2_ACCESS_GUIDE.md  create_tables.py  docker-compose.yml  environment.yml  generate-keys.js  pyproject.toml  requirements.txt  setup.sh
.github/: copilot-instructions.md
api/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py
config/: __init__.py  settings.py
data/: README.md  ecosense_250911.csv  hipster.color-palette
docker/: .env.example  .env.simple  .gitignore  Dockerfile.db  README.md  TROUBLESHOOTING.md  docker-compose.simple.yml  docker-compose.yml  refresh-lookups.sh  reset.sh
docs/: ARCHITECTURE.md  README.md  api-quick-reference.md  api-spec.md  api_reference_visual.md  api_spec.md  architecture.md  audit-and-implementation-plan.md  data-access-guide.md  data_contracts_and_apis.md  database-erd.dbml  database-overview.md  database-schema.md  database-testing-report.md  database_design.md  database_schema.md  deployment-guide.md  developer_guide.md  documentation_overview.md  documentation_standards.md  forest-digital-twin-concept.md  forest-digital-twin-literature.md  growth-simulation-schema.md  implementation-plan.md  local-deployment-guide.md  operations-guide.md  principles.md  project_structure_guide.md  quick_start_visual_guide.md  ressources.md  runbook.md  sensorreadings-scaling-evaluation.md  silva-coupling.md  sources.md  species-naming-audit.md  supabase-introduction.md  system_introduction.md  troubleshooting.md  unreal-engine-integration.md  variant-scenario-model.md
nginx/: nginx.conf
scripts/: README.md  create_import_files.py  environment.yml  find-active-sensors.py  import-ecosense.py  import-trees.sql  import_trees.Rmd  import_trees.ipynb  import_trees_simple.Rmd  import_trees_simple.ipynb  test-aquarius.py  test-sensor-query.py
supabase/: config.toml  (+1 more)
(+271 files in other folders)
